Fix alignment

--- a/src/components/QuizUI/index.css
+++ b/src/components/QuizUI/index.css
@@ -570,9 +570,9 @@ html {
   margin-right: 2rem;
   display: inline-flex;
   justify-content: end;
-  align-self: flex-start;
+  align-self: center;
   align-items: center;
-  margin-top: 1.5rem;
+  /* margin-top: 1.5rem; */
 
 
   svg {
